<resources>
    <string name="app_name">roomi</string>
    <string name="title_activity_navigation_drawer">navigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jacob Ladan</string>
    <string name="nav_header_subtitle">jacob.ladan@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="login_button">Login</string>
    <string name="create_account">create account</string>
    <string name="welcome_home_message">Welcome home, Jacob</string>
    <string name="home">home</string>
    <string name="security">security</string>
    <string name="kitchen">kitchen</string>
    <string name="bedroom">bedroom</string>
    <string name="living_room">living room</string>
    <string name="plus">+</string>
    <string name="title_activity_hamburger_menu">HamburgerMenu</string>
    <string name="rooms">rooms</string>
    <string name="personnel">personnel</string>
    <string name="add_a_person">add a person</string>
    <string name="about_us">about us</string>
    <string name="menu_home">Home</string>
    <string name="menu_security">Security</string>
    <string name="menu_information">Information</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_exit">Exit</string>
    <string name="aboutUs_info"> Roomi is an interactive application that allows you to control the settings and configurations of a particular room in your smart home.
        The core objective of Roomi is to allow the user to access both their room security and smart home settings from one central application. This app will allow users easier and more intuitive
        access to security and smart home management</string>
    <string name="about_us_string">About Us</string>
    <string name="additional_information">Our Goal</string>
    <string name="additional_info_string">Roomi values ease of use over all attributes. The application\'s main goal is to allow the easier control of various traits of rooms and security throughout homes, offices, and/or labs. Among other features, the application values reliability. To ensure the best user experience these key traits are crucial to the development process. Users are able to change settings about a room such as lighting and temperature. Additional support for third party smart devices will be added in the future. </string>
    <string name="placeholder_text">placeholder</string>
    <string name="select_a_room">Select a room</string>
    <string name="add_a_room">add a room</string>
    <string name="name">Name</string>
    <string name="temperature">Temperature Level (15–25°C)</string>
    <string name="brightness">Brightness Level (0–100%)</string>
    <string name="submit">submit</string>
    <string name="temperature_label">Temperature:</string>
    <string name="brightness_label">Light Brightness:</string>
    <string name="degrees_cel">°C</string>
    <string name="percent">%</string>
    <string name="add_access_level_0_5">Access Level (0-5)</string>
    <string name="select_a_person">Select a person</string>
    <string name="avatar_colour">Avatar Colour</string>
    <string name="update_security_settings">Update Security Settings</string>

</resources>
